@@ -1,5 +1,11 @@
 2007-05-04  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/ifscompose/ifscompose.c
+	* plug-ins/ifscompose/ifscompose_utils.c: reduce the number of
+	progress updates.
+
+2007-05-04  Sven Neumann  <sven@gimp.org>
+
 	* app/display/gimpstatusbar.c (gimp_statusbar_progress_message):
 	reverted last change, the behavior is different.
 
